add auction list

--- a/src/components/layout/Navbar.scss
+++ b/src/components/layout/Navbar.scss
@@ -13,21 +13,19 @@
 
             .logo-content {
                 line-height: 1;
-
                 .logo-content-a {
                     font-size: 24px;
-
+                    font-weight: 700;
                 }
                 .logo-content-b {
                     font-size: 16px;
-
-
+                    font-weight: 600;
                 }
             }
         }
 
         .button-login-container {
-            padding: 6px 20px;
+            padding: 15px 14px;
             margin: 16px 10px;
             border: 1px solid black;
             border-radius: 10px;
