--- a/src/components/seller-dashboard/addproperties/AddProperties.scss
+++ b/src/components/seller-dashboard/addproperties/AddProperties.scss
@@ -18,7 +18,7 @@
     background-color: #118BF4!important;
     color: white!important;
     height: 60px;
-    margin-top: 50px;
+    margin-top: 50px!important;
     margin-left: 2%;
     margin-right: 2%;
 }
