--- a/src/components/layout/navbar/Navbar.scss
+++ b/src/components/layout/navbar/Navbar.scss
@@ -1,4 +1,5 @@
 .navbar-container {
+    position: relative;
     .header {
         background-color: white;
         color: black;
@@ -32,5 +33,13 @@
 
         }
 
+    }
+
+    .wallet {
+        position: absolute;
+        // display: none;
+        right: 100px;
+        top: 70px;
+        z-index: 4000;
     }
 }
