--- a/src/components/wallet/Wallet.scss
+++ b/src/components/wallet/Wallet.scss
@@ -1,14 +1,14 @@
 .wallet-container {
   width: 350px;
-  height: 400px;
-  background-color: black;
-  color: white;
-  border-radius: 20px;
+  background-color: whitesmoke;
+  color: black;
+  border-radius: 10px;
+  border: 0.1px solid rgba(0, 0, 0, 0.285);
   h1 {
     text-align: center;
     padding: 20px 0;
-    font-weight: 400;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 24px;
   }
 
   .balance-field {
@@ -18,10 +18,11 @@
     border-radius: 20px;
     margin: 0 20px;
     padding: 10px 20px;
+    border: 1px solid black;
 
     p {
       margin: 0;
-      font-weight: 600;
+      font-weight: 400;
     }
 
     .balance-number {
@@ -41,16 +42,23 @@
     margin-top: 50px;
     border-radius: 15px;
 
+    &:hover {
+      background-color: #288be2;
+    }
+
     p {
       margin: 0;
       padding-top: 4px;
-      color: white;
+      color: black;
       font-size: 20px;
     }
+  }
 
-    .payment {
-      font-size: 16px;
-      margin-top: 20px;
-    }
+  .payment {
+    font-size: 16px;
+    margin-top: 20px;
+    text-align: center;
+    padding-top: 4px;
+    width: 100%;
   }
 }
